<resources>
    <string name="app_name">Housekeep</string>
    <string name="loginLabel">Login</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonLabel">Login</string>
    <string name="signUpRedirect">Don\'t have an account? Sign up</string>
    <string name="signUpLabel">Sign Up</string>
    <string name="name">Name</string>
    <string name="loginRedirect">Already have an account? Login</string>
    <string name="homeTasksLabel">Home Maintenance Tasks</string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="add_category">Add Category</string>
    <string name="add_task">Add Task</string>
    <string name="task_details">Task Details</string>
    <string name="task_name">Task Name</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="enter_preference_value">Enter preference value</string>
    <string name="save_preference">Save Preference</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="add">+</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="house_name">House Name</string>
</resources>