<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCentered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextPreference"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_preference_value"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonSavePreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_preference"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonLogoutSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonBackSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
