<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true">
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="8dp" />
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/homeTasksLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/plusButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@android:drawable/ic_input_add"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add"
            android:scaleType="centerInside"
            android:padding="4dp"
            app:tint="#888888" />
    </LinearLayout>


    <!-- Task List -->
    <ListView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout"
        android:layout_marginTop="16dp" />

</RelativeLayout>